--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -24,97 +24,97 @@ env:
   imageName: netcoreconf23ml
 
 jobs:
-  # check_acr_vulns:
-  #   name: Container Registry assessment
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     tfsecOutcome: ${{ steps.tfsec-execution-acr.outcome }}
-  #     tflintOutcome: ${{ steps.tflint-execution-acr.outcome }}
+  check_acr_vulns:
+    name: Container Registry assessment
+    runs-on: ubuntu-latest
+    outputs:
+      tfsecOutcome: ${{ steps.tfsec-execution-acr.outcome }}
+      tflintOutcome: ${{ steps.tflint-execution-acr.outcome }}
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: tflint acr
-  #       id: tflint-execution-acr
-  #       continue-on-error: true
-  #       working-directory: ${{ github.workspace }}/src/Terraform/container-registry
-  #       run: |
-  #         tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
+    steps:
+      - uses: actions/checkout@v2
+      - name: tflint acr
+        id: tflint-execution-acr
+        continue-on-error: true
+        working-directory: ${{ github.workspace }}/src/Terraform/container-registry
+        run: |
+          tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
 
-  #         echo tflint --module -f sarif $tfLintRulesExcluded
-  #         echo 'plugin "azurerm" {' >.tflint.hcl
-  #         echo '  enabled = true' >>.tflint.hcl
-  #         echo '}' >>.tflint.hcl
-  #         mkdir -p .tflint.d/plugins
-  #         cd .tflint.d/plugins
+          echo tflint --module -f sarif $tfLintRulesExcluded
+          echo 'plugin "azurerm" {' >.tflint.hcl
+          echo '  enabled = true' >>.tflint.hcl
+          echo '}' >>.tflint.hcl
+          mkdir -p .tflint.d/plugins
+          cd .tflint.d/plugins
 
-  #         curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
-  #         unzip tflint-AzRuleset.zip
-  #         rm tflint-AzRuleset.zip
-  #         chmod +x tflint-ruleset-azurerm
+          curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
+          unzip tflint-AzRuleset.zip
+          rm tflint-AzRuleset.zip
+          chmod +x tflint-ruleset-azurerm
 
-  #         docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/container-registry" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} -f sarif --module $tfLintRulesExcluded > ${{ github.workspace }}/src/Terraform/container-registry/tflint-container-registry.sarif
+          docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/container-registry" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} -f sarif --module $tfLintRulesExcluded > ${{ github.workspace }}/src/Terraform/container-registry/tflint-container-registry.sarif
 
-  #     - name: tfsec acr
-  #       id: tfsec-execution-acr
-  #       continue-on-error: true
-  #       run: |
-  #         docker run --rm -v "${{ github.workspace }}/src/Terraform:/src" aquasec/tfsec:${{ env.tfsecVersion }} --format sarif /src/container-registry > ${{ github.workspace }}/src/Terraform/container-registry/tfsec-container-registry.sarif
+      - name: tfsec acr
+        id: tfsec-execution-acr
+        continue-on-error: true
+        run: |
+          docker run --rm -v "${{ github.workspace }}/src/Terraform:/src" aquasec/tfsec:${{ env.tfsecVersion }} --format sarif /src/container-registry > ${{ github.workspace }}/src/Terraform/container-registry/tfsec-container-registry.sarif
 
-  #     - name: Upload tflint SARIF file
-  #       uses: github/codeql-action/upload-sarif@v2
-  #       with:
-  #         sarif_file: ./src/Terraform/container-registry/tflint-container-registry.sarif
+      - name: Upload tflint SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./src/Terraform/container-registry/tflint-container-registry.sarif
 
-  #     - name: Upload tfsec SARIF file
-  #       uses: github/codeql-action/upload-sarif@v2
-  #       with:
-  #         sarif_file: ./src/Terraform/container-registry/tfsec-container-registry.sarif
+      - name: Upload tfsec SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./src/Terraform/container-registry/tfsec-container-registry.sarif
 
-  # check_aas_vulns:
-  # name: App Services assessment
-  # runs-on: ubuntu-latest
-  # outputs:
-  #   tfsecOutcome: ${{ steps.tfsec-execution-aas.outcome }}
-  #   tflintOutcome: ${{ steps.tflint-execution-aas.outcome }}
+  check_aas_vulns:
+    name: App Services assessment
+    runs-on: ubuntu-latest
+    outputs:
+      tfsecOutcome: ${{ steps.tfsec-execution-aas.outcome }}
+      tflintOutcome: ${{ steps.tflint-execution-aas.outcome }}
 
-  # steps:
-  #   - uses: actions/checkout@v2
-  #   - name: tflint app services
-  #     id: tflint-execution-aas
-  #     continue-on-error: true
-  #     working-directory: ${{ github.workspace }}/src/Terraform/app-services
-  #     run: |
-  #       tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
+    steps:
+      - uses: actions/checkout@v2
+      - name: tflint app services
+        id: tflint-execution-aas
+        continue-on-error: true
+        working-directory: ${{ github.workspace }}/src/Terraform/app-services
+        run: |
+          tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
 
-  #       echo tflint --module -f sarif $tfLintRulesExcluded
-  #       echo 'plugin "azurerm" {' >.tflint.hcl
-  #       echo '  enabled = true' >>.tflint.hcl
-  #       echo '}' >>.tflint.hcl
-  #       mkdir -p .tflint.d/plugins
-  #       cd .tflint.d/plugins
+          echo tflint --module -f sarif $tfLintRulesExcluded
+          echo 'plugin "azurerm" {' >.tflint.hcl
+          echo '  enabled = true' >>.tflint.hcl
+          echo '}' >>.tflint.hcl
+          mkdir -p .tflint.d/plugins
+          cd .tflint.d/plugins
 
-  #       curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
-  #       unzip tflint-AzRuleset.zip
-  #       rm tflint-AzRuleset.zip
-  #       chmod +x tflint-ruleset-azurerm
+          curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
+          unzip tflint-AzRuleset.zip
+          rm tflint-AzRuleset.zip
+          chmod +x tflint-ruleset-azurerm
 
-  #       docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/app-services" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} -f sarif --module $tfLintRulesExcluded > ${{ github.workspace }}/src/Terraform/app-services/tflint-app-services.sarif
+          docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/app-services" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} -f sarif --module $tfLintRulesExcluded > ${{ github.workspace }}/src/Terraform/app-services/tflint-app-services.sarif
 
-  #   - name: tfsec app services
-  #     id: tfsec-execution-aas
-  #     continue-on-error: true
-  #     run: |
-  #       docker run --rm -v "${{ github.workspace }}/src/Terraform:/src" aquasec/tfsec:${{ env.tfsecVersion }} --format sarif /src/app-services > ${{ github.workspace }}/src/Terraform/app-services/tfsec-app-services.sarif
+      - name: tfsec app services
+        id: tfsec-execution-aas
+        continue-on-error: true
+        run: |
+          docker run --rm -v "${{ github.workspace }}/src/Terraform:/src" aquasec/tfsec:${{ env.tfsecVersion }} --format sarif /src/app-services > ${{ github.workspace }}/src/Terraform/app-services/tfsec-app-services.sarif
 
-  #   - name: Upload tflint aas SARIF file
-  #     uses: github/codeql-action/upload-sarif@v2
-  #     with:
-  #       sarif_file: ./src/Terraform/app-services/tflint-app-services.sarif
+      - name: Upload tflint aas SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./src/Terraform/app-services/tflint-app-services.sarif
 
-  #   - name: Upload tfsec aas SARIF file
-  #     uses: github/codeql-action/upload-sarif@v2
-  #     with:
-  #       sarif_file: ./src/Terraform/app-services/tfsec-app-services.sarif
+      - name: Upload tfsec aas SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./src/Terraform/app-services/tfsec-app-services.sarif
 
   deploy_frontend:
     name: Frontend deployment
